--- a/final_design/memory_pwm_generator_top.qsf
+++ b/final_design/memory_pwm_generator_top.qsf
@@ -48,7 +48,6 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 
 set_location_assignment PIN_N2 -to I_CLK_50_MHZ
-set_location_assignment PIN_G26 -to I_RESET_N
 
 set_location_assignment PIN_K4 -to O_LCD_RW
 set_location_assignment PIN_K3 -to O_LCD_ENABLE
@@ -67,6 +66,7 @@ set_location_assignment PIN_K2 -to O_LCD_BLON
 set_location_assignment PIN_P24 -to IO_I2C_SDA
 set_location_assignment PIN_R24 -to IO_I2C_SCL
 
+set_location_assignment PIN_G26 -to I_KEY_0_N
 set_location_assignment PIN_N23 -to I_KEY_1_N
 set_location_assignment PIN_P23 -to I_KEY_2_N
 set_location_assignment PIN_W26 -to I_KEY_3_N
